src/test/deca/context/valid/thibault/test1.deca
{
	int a;
	int b;
	boolean t;
	float c;
	a=0;
	b=10;
	a=a+1;
        b=a;
}
	