src/test/deca/context/invalid/thibault/float.deca
{
    int i=1;
    float f=1.0;
    f=f+i;
}
